name: Kalmarity
version: 0.0.1
license: AGPL-3

build-type: Simple
cabal-version: 2.0

Executable kalmarity
  default-language: Haskell2010
  Main-Is: Kalmarity.hs
  Other-Modules:
    Types
  Hs-Source-Dirs: src
  Build-Depends:
      base                  >= 4.13
    , base-unicode-symbols  >= 0.2
    , calamity              >= 0.7.1.0
    , optics                >= 0.4.2
    , lens                  >= 5.2
    , di-polysemy           >= 0.2
    , di                    >= 1.3
    , df1                   >= 0.4.1
    , di-core               >= 1.0.4
    , polysemy              >= 1.7.1.0
    , polysemy-plugin       >= 0.4.3.1
    , stm                   >= 2.5
    , text                  >= 1.2.5
    , text-show             >= 3.9.7
 ghc-options:
    -Wall
