name: Kalmarity
version: 0.0.1
license: AGPL-3

build-type: Simple
cabal-version: 2.0

Executable kalmarity
  default-language: Haskell2010
  Main-Is: Kalmarity.hs
  Other-Modules:
    Kalmarity.Common,
    Kalmarity.Bot.Utils,
    Kalmarity.Bot.Config,
    Kalmarity.Bot.Database,
    Kalmarity.Bot.Commands,
    Kalmarity.Bot.Handlers
  Hs-Source-Dirs: src
  default-extensions:
    DataKinds
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    GADTs
    LambdaCase
    MultiWayIf
    OverloadedLabels
    OverloadedStrings
    PartialTypeSignatures
    PolyKinds
    ScopedTypeVariables
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns
    UnicodeSyntax
  ghc-options: -Wall -Wno-name-shadowing -fplugin=Polysemy.Plugin -threaded -rtsopts -with-rtsopts=-N
  Build-Depends:
      base                  >= 4.13
    , base-unicode-symbols  >= 0.2
    , containers            >= 0.6.5.1
    , aeson                 >= 2.0.3.0
    , conduit               >= 1.3.4.1
    , calamity              >= 0.7.1.0
    , calamity-commands     >= 0.4.0.0
    , optics                >= 0.4.2
    , lens                  >= 5.2
    , di-polysemy           >= 0.2
    , di                    >= 1.3
    , df1                   >= 0.4.1
    , di-core               >= 1.0.4
    , polysemy              >= 1.7.1.0
    , polysemy-plugin       >= 0.4.3.1
    , polysemy-time         >= 0.6.0.0
    , stm                   >= 2.5
    , text                  >= 1.2.5
    , text-show             >= 3.9.7
    , persistent            >= 2.14.0.3
    , persistent-sqlite     >= 2.13.1.0
    , monad-logger          >= 0.3.39
    , optparse-generic      >= 1.4.9
    , req                   >= 3.13.0
    , data-flags            >= 0.0.3.4
    , yaml                  >= 0.11.10.0
    , directory             >= 1.3.6.2
